--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hello World My name is</title>
+    <title>Hello World</title>
     <meta charset="utf-8" />
   </head>
   <body></body>
