--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
     <title>Hello World!</title>
     <meta charset="utf-8" />
   </head>
-  <body></body>
+  <body>
+    Odin Recipes <a href="recipes/couscous.html">Couscous</a>
+    <a href="recipes/tajine.html">Tajine</a>
+  </body>
 </html>
