--- a/recipes/tajine.html
+++ b/recipes/tajine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hello World!</title>
+    <title>Tajine</title>
     <meta charset="utf-8" />
   </head>
   <body>
@@ -10,7 +10,8 @@
       src="https://m.bettybossi.ch/static/rezepte/x/bb_bbze140515_0015a_x.jpg"
       alt="Tasty Tajine"
     />
-    <h4>Chicken Couscous with vegetables</h4>
+    Description
+    <h4>Chicken Tajine with vegetables</h4>
     <h5>Ingredients:</h5>
     <ul>
       <li>6 cloves garlic, peeled and finely chopped</li>
