--- a/recipes/tajine.html
+++ b/recipes/tajine.html
@@ -3,15 +3,19 @@
   <head>
     <title>Tajine</title>
     <meta charset="utf-8" />
+    <link href="../style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Tajine</h1>
-    <img
-      src="https://m.bettybossi.ch/static/rezepte/x/bb_bbze140515_0015a_x.jpg"
-      alt="Tasty Tajine"
-    />
-    Description
-    <h4>Chicken Tajine with vegetables</h4>
+    <a href="../index.html">Home</a>
+    <div class="title-tajine">
+      <h1 class="tajine">Tajine</h1>
+      <img
+        src="https://m.bettybossi.ch/static/rezepte/x/bb_bbze140515_0015a_x.jpg"
+        alt="Tasty Tajine"
+      />
+    </div>
+    <h4>Description</h4>
+    <p>Chicken Tajine with vegetables</p>
     <h5>Ingredients:</h5>
     <ul>
       <li>6 cloves garlic, peeled and finely chopped</li>
